# mippy

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
dbs/: dataset-serverC.db  local_dataset0.db  local_dataset1.db
mippy/: __init__.py  baseclasses.py  database.py  designmatrix.py  exceptions.py  expressions.py  localnode.py  master.py  parameters.py  pretty.py  reduce.py  server.py  stackmachine.py  worker.py  workerproxy.py  workingnodes.py
mippy.egg-info/: PKG-INFO  SOURCES.txt
mippy/machinelearning/: __init__.py  kmeans.py  linear_regression.py  logistic_regression.py  naive_bayes.py  pca.py  pearson.py
mippy/ml/: __init__.py  kmeans.py  linear_regression.py  logistic_regression.py  naive_bayes.py  pca.py  pearson.py
scripts/: start_servers.py
src/: baseclasses.py  centralnode.py  database.py  exceptions.py  local_nodes.py  localnode.py  localnodes.py  logistic_client.py  logistic_regression.py  logistic_server.py  nodes.py  parameters.py  pca.py  workingnodes.py
src/database/: __init__.py  database.py
src/logistic_regression/: __init__.py  client.py  properties.py  server.py
