[tool.poetry]
name = "mippy"
version = "0.1.0"
description = "The Medical Informatic Plateform in python"
authors = ["Jason Sakellariou"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
addict = "^2.2.1"
Pyro5 = "^5.10"
sqlalchemy = "^1.3.17"
pandas = "^1.0.3"
scipy = "^1.4.1"
pylint = "^2.5.3"
flake8 = "^3.8.3"
tqdm = "^4.46.1"
pdbpp = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
pytest = "^5.4.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
